resolved two vertical scrollbars

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -22,6 +22,9 @@ html, body, #root {
   height: 100%;
   /* font-family: Helvetica, sans-serif; */
   font-size: 16px;
+}
+
+html {
   overflow: auto;
 }
 
@@ -42,7 +45,6 @@ html, body, #root {
 
 .expand {
   background-color: #fff;
-  overflow: auto;
   width: 100%;
   height: 100%;
   min-height: 1080px;
